動作を改善

--- a/index.html
+++ b/index.html
@@ -3,17 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-  <meta property='og:type' content='website'>
-  <meta property='og:title' content='WebデザイナーTARO YAMADA ポートフォリオ'>
-  <meta property='og:url' content='URLが入る'>
-  <meta property='og:description' content='Webデザイナー TARO YAMADAのポートフォリオサイトです！'>
-  <meta property="og:image" content="img/ogp.png">
-  <meta name="description" content="Webデザイナー TARO YAMADAのポートフォリオサイトです！" />
   <title>ポートフォリオ - 上東諒平</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
-  <link href="css/reset.css" media="all" rel="stylesheet" type="text/css" />
-  <link href="css/photoswipe/photoswipe.css" media="all" rel="stylesheet" type="text/css" />
-  <link href="css/photoswipe/default-skin/default-skin.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="img/favicon.ico" />
   <link rel=”canonical” href=”URLが入る” />
@@ -52,10 +43,9 @@
             </div>
           </div>
           <div class="section-body card-wrapper my-gallery">
-            <div class="card">
-              <a href="img/works/ss-bootstrap-grid.png" data-size="960x720" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/works/ss-bootstrap-grid.png" alt="" />
-              </a>
+            <div class="card works-card">
+              <a class="works-link" href="https://ryohei-uehigashi.github.io/bootstrap-grid/"></a>
+              <img class="lazyload fadein" src="img/works/ss-bootstrap-grid.png" alt="" />
               <div class="card-caption">
                 <div class="card-caption-title">bootstrap-grid</div>
                 <div class="card-caption-info">Gridの練習で作りました。<br>画面の大きさに応じて横にカードが３、２、１つ表示されます。</div>
@@ -63,10 +53,9 @@
                 </div>
               </div>
             </div>
-            <div class="card">
-              <a href="img/works/ss-bootstrap-sample.png" data-size="960x720" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/works/ss-bootstrap-sample.png" data-src="img/works/ss-bootstrap-sample.png" alt="" />
-              </a>
+            <div class="card works-card">
+              <a href="https://ryohei-uehigashi.github.io/bootstrap-sample/" class="works-link"></a>
+              <img class="lazyload fadein" src="img/works/ss-bootstrap-sample.png" data-src="img/works/ss-bootstrap-sample.png" alt="" />
               <div class="card-caption">
                 <div class="card-caption-title">bootstrap-sample</div>
                 <div class="card-caption-info">NavbarとかJumbotronとかcardとか</div>
@@ -188,7 +177,7 @@
         </ul>
       </div>
       <div class="inner">
-        <div class="copyright">Copyright&copy;TARO YAMADA. All Rights Reserved.</div>
+        <div class="copyright">Copyright&copy;Ryohei Uehigashi. All Rights Reserved.</div>
         </div>
     </footer>
   </div>
@@ -261,9 +250,6 @@
 
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script type='text/javascript' src="js/photoswipe/photoswipe.min.js"></script>
-  <script type='text/javascript' src="js/photoswipe/photoswipe-ui-default.js"></script>
-  <script type='text/javascript' src="js/photoswipe/photoswipe_setup.js"></script>
   <script type='text/javascript' src="js/lazysizes/lazysizes.min.js"></script>
   <script type='text/javascript' src="js/script.js"></script>
 </body>
